fix issue #299: Component and version display wrongly, not having box wrap as legacy ap

--- a/mycollab-web/src/main/resources/VAADIN/themes/mycollab/styles.css
+++ b/mycollab-web/src/main/resources/VAADIN/themes/mycollab/styles.css
@@ -3071,7 +3071,7 @@ div.v-window-header {
 /* End no border Panel */
 
 /* Form Container View Field */
-.form-container .v-csslayout .v-button-link {
+.form-container div.v-button-link, .form-container div.v-button-link:active, .form-container div.v-button-link:focus {
 	height: 18px;
 	border-radius: 8px 8px 8px 8px;
 	background: url("icons/grad-dark-bottom.png") repeat-x scroll left
@@ -3080,7 +3080,7 @@ div.v-window-header {
 	margin-right: 2px;
 }
 
-.form-container .v-csslayout .v-button-link .v-button-caption {
+.form-container .v-button-link .v-button-caption {
 	color: white;
 }
 /* End Form Container View Field */
